--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <body>
         <script>
           let d = new Date();
-          document.body.innerHTML = "<h1>Today's date is " + d + "</h1>"
+          document.body.innerHTML = "Today's date is " + d"
+          async
         </script>    
     </body>
 </html>
